--- a/.github/workflows/pipline.yaml
+++ b/.github/workflows/pipline.yaml
@@ -12,18 +12,22 @@ jobs:
 		- name: Checkout code
 		uses: actions/checkout@v3
 		
-		- name: Setup .NET Core
+		- name: Setup dotNet
 		uses: actions/setup-dotnet@v3
 		with:
 			dotnet-version: '6.0.x'
+		
 		- name: install Chrome
 		run: 
 		  sudo apt-get update
 		  sudo apt-get install -y google-chrome-stable
+		
 		- name: Install dependencies
 		  run: dotnet restore
+		
 		- name: Build
 		  run: dotnet build --no-restore
+		
 		- name: Run tests
 		  env:	
 		    CHROMEWEBDRIVER: /usr/bin/google-chrome
