--- a/.github/workflows/pipline.yaml
+++ b/.github/workflows/pipline.yaml
@@ -8,20 +8,21 @@ jobs:
   build:
     runs-on:  ubuntu-latest
 	  steps:
-	    - name: Checkout code
-		  uses: actions/checkout@v3
-	    - name: Setup dotNet
-		  uses: actions/setup-dotnet@v3
-		  with:
-		    dotnet-version: '6.0.x'
-		- name: Install dependencies
-		  run: dotnet restore
+	  - name: Checkout code
+	    uses: actions/checkout@v3
+      - name: Set up .Net Core
+        uses: actions/setup-dotnet@v3
+	    with:
+	      dotnet-version: '6.0.x'
+	  - name: Install dependencies
+		run: dotnet restore
 				
-		- name: Build
-		  run: dotnet build --no-restore
+	  - name: Build
+		run: dotnet build --no-restore
 				
-		- name: Run tests
-		  run: dotnet test --verbosity normal
+	  - name: Run tests
+		run: dotnet test --verbosity normal
+			
 			
 			
 	
