--- a/.github/workflows/pipline.yaml
+++ b/.github/workflows/pipline.yaml
@@ -1,4 +1,4 @@
-Name: Selenium IDE CI
+name: Selenium IDE Project
 
 on:
   push:
@@ -6,24 +6,18 @@ on:
       - main
 jobs:
   build:
-    runs-on:  ubuntu-latest
-	  steps:
-	  - name: Checkout code
-	    uses: actions/checkout@v3
-      - name: Set up .Net Core
-        uses: actions/setup-dotnet@v3
-	    with:
-	      dotnet-version: '6.0.x'
-	  - name: Install dependencies
-		run: dotnet restore
-				
-	  - name: Build
-		run: dotnet build --no-restore
-				
-	  - name: Run tests
-		run: dotnet test --verbosity normal
-			
-			
-			
-	
+    runs-on:
 
+    step:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Setup dotNet
+        uses: action/setup-dotnet@v3
+        with: 
+          dotnet-version: 6.0.x
+      - name: install nuget packeges
+        run: dotnet restore
+      - name: build the test project
+        run: dotnet build --no-restore
+      - name: run tests
+        run: dotnet test
