--- a/.github/workflows/pipline.yaml
+++ b/.github/workflows/pipline.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Setup dotNet
-        uses: action/setup-dotnet@v3
+        uses: actions/setup-dotnet@v3
         with: 
           dotnet-version: 6.0.x
       - name: install nuget packeges
